# CGProject

./: CMakeLists.txt  README.md  main.cpp  tasks.txt
Eigen/: Core
Eigen/src/Cholesky/: LDLT.h  LLT.h
Eigen/src/Core/: CoreIterators.h  DenseStorage.h  GenericPacketMath.h  PlainObjectBase.h  ProductEvaluators.h  ReturnByValue.h  Transpositions.h
Eigen/src/Core/products/: GeneralBlockPanelKernel.h  GeneralMatrixMatrix.h  GeneralMatrixVector.h
Eigen/src/Core/util/: Macros.h  (+4 more)
Eigen/src/Eigenvalues/: GeneralizedEigenSolver.h  HessenbergDecomposition.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
Eigen/src/Geometry/: Quaternion.h
Eigen/src/LU/: FullPivLU.h
Eigen/src/QR/: CompleteOrthogonalDecomposition.h
images/: CGDemo.ppm  TorusBVH.ppm  TorusBVHinvis.ppm  TorusBVHzicht.ppm  TorusWOBVH.ppm  sphere1.ppm  sphere2.ppm
include/: AABB.h  AreaLight.h  BVH.h  Camera.h  DirectionalLight.h  Hitpoint.h  Intersection.h  Light.h  Material.h  Object.h  Plane.h  PointLight.h  RGB.h  Ray.h  Scene.h  Sphere.h  Triangle.h  TriangleMesh.h  WaveFrontParser.h  blinn_phong_shading.h  first_hit.h  lambertian_reflection.h  raycolor.h  sampling.h  viewing_ray.h  write_ppm.h
sample_images/: shiny_dragon.ppm
src/: AABB.cpp  AreaLight.cpp  BVH.cpp  Camera.cpp  Hitpoint.cpp  Intersection.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleMesh.cpp  WaveFrontParser.cpp  lambertian_reflection.cpp  raycolor.cpp  sampling.cpp  write_ppm.cpp
src/headers/: Camera.h  LightSource.h  Plane.h  Ray.h  Shape.h  Sphere.h
src/headers/film/: FrameBuffer.h  Pixel.h  RGB.h
(+1 files in other folders)
